--- a/index2.html
+++ b/index2.html
@@ -1,35 +1,114 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi WebMap de NextGIS</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-        }
-        #mapContainer {
-            height: 100%;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portal de Mapas - SSMapas</title>
+  <link rel="stylesheet" href="leaflet.css" />
+  <script src="leaflet.js"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f6f6f7;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    header {
+      background-color: #2e7d32;
+      color: white;
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    header h1 {
+      font-size: 1.2rem;
+      margin: 0;
+      font-weight: 500;
+    }
+
+    #main {
+      display: flex;
+      flex: 1;
+      height: calc(100vh - 50px);
+    }
+
+    /* Panel lateral */
+    #sidebar {
+      width: 280px;
+      background-color: white;
+      border-right: 1px solid #ddd;
+      box-shadow: 1px 0 3px rgba(0, 0, 0, 0.05);
+      padding: 15px;
+      overflow-y: auto;
+    }
+
+    #sidebar h2 {
+      font-size: 1rem;
+      margin-bottom: 10px;
+      color: #2e7d32;
+    }
+
+    #layerList {
+      list-style: none;
+      padding: 0;
+    }
+
+    #layerList li {
+      margin-bottom: 8px;
+    }
+
+    #layerList label {
+      cursor: pointer;
+      user-select: none;
+      color: #333;
+    }
+
+    /* Mapa */
+    #map {
+      flex: 1;
+      height: 100%;
+      width: 100%;
+    }
+
+    footer {
+      background-color: #f0f0f0;
+      text-align: center;
+      padding: 8px;
+      font-size: 0.8rem;
+      color: #555;
+      border-top: 1px solid #ddd;
+    }
+  </style>
 </head>
 <body>
-    <div id="mapContainer">
-        <!-- Cambia la URL del src al enlace de tu WebMap en NextGIS Web -->
-        <iframe
-            src="https://TU_DOMINIO_DE_NEXTGIS/…/display?panel=layers&hl_lid=XXXX&hl_attr=ID&hl_val=YYY&zoom=true"
-            width="100%"
-            height="100%"
-            frameborder="0"
-            style="border:0"
-            allowfullscreen
-            aria-hidden="false"
-            tabindex="0">
-        </iframe>
-    </div>
-</body>
-</html>
+  <header>
+    <h1>Portal de Mapas SSMapas</h1>
+    <span>Visualizador Web</span>
+  </header>
+
+  <div id="main">
+    <aside id="sidebar">
+      <h2>Capas disponibles</h2>
+      <ul id="layerList">
+        <li><label><input type="checkbox" id="layer1" checked> Límites municipales</label></li>
+        <li><label><input type="checkbox" id="layer2" checked> Red vial</label></li>
+        <li><label><input type="checkbox" id="layer3"> Zonas de riesgo</label></li>
+      </ul>
+    </aside>
+
+    <div id="map"></div>
+  </div>
+
+  <footer>
+    © 2025 SSMapas | Desarrollado con QGIS2Web y Leaflet
+  </footer>
+
+  <script>
+    // Inicializa el mapa (Leaflet)
+    var map = L.map('map').setView([18.8, -99.2], 10);
